Add dev name to the page

--- a/style.css
+++ b/style.css
@@ -65,3 +65,11 @@ body {
   cursor: pointer;
   width: 250px;
 }
+
+.dev-credits {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 10px;
+  color: white;
+}
